# livekit_agent_simulator

./: .gitignore  AGENTS.md  README.md  WIP.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: PROBLEM.md  caller-pattern-plan.md  plugins.md  smoke-test.md  telephony.md
docs/guide/: installation.md
docs/plans/: BUG-20260714-inbound-stale-agent-room.md  BUG-20260715-script-freestyle-dialogue.md  PLAN-20260713-simleg-refactor.md  (+2 more)
scripts/: build_portable.py  bundle_report_player.py
templates/: GUIDE.md  config.yaml  ivr-pin-entry-draft.jsonl  outbound-callee-sim.jsonl  outbound-sip.jsonl  scenario-scaffold.jsonl
tests/: test_agent_session_observer.py  test_asserts.py  test_authoring.py  test_backchannel_continue.py  test_baseline_compare.py  test_behavior_compile.py  test_bundle_report_player.py  test_caller_policy.py  test_cue_catalog.py  test_dtmf_script.py  test_evals_judge.py  test_execute_parallel.py  test_guide.py  test_hang_up_gate.py  test_hold_timeout.py  test_interrupt_rate.py  test_markers_class.py  test_mic_mixer.py  test_multi_judge.py  test_package_web_dir.py  test_people_pleaser_templates.py  test_persona_script_mute.py  test_portable_install.py  test_room_resolve.py  test_run_id.py  test_sapi_tts.py  test_scenario_caller_telephony.py  test_scenario_from_run.py  test_scenario_init.py  test_script.py  test_silent_mode.py  test_sim_leg.py  test_suite.py  test_tool_order.py  test_trait_script_defaults.py  test_transcript_dedupe.py  test_web_server.py
web/: README.md  tsconfig.json  vite.config.ts
(+83 files in other folders)
