[project]
name = "livekit-agent-simulator"
version = "0.1.3"
description = "Standalone MCP + CLI that simulates a realtime caller against any LiveKit voice agent and records a full forensic behavior log."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
dependencies = [
    "fastmcp>=2.0",
    "livekit>=1.0",
    "livekit-api>=1.0",
    "google-genai>=1.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "aiosqlite>=0.20",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
lk-sim = "livekit_agent_simulator.cli:main"
# Optional short entry (same as `lk-sim mcp`) for hosts that prefer a single argv[0]
lk-sim-mcp = "livekit_agent_simulator.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/livekit_agent_simulator"]

# Ship scaffold + cue assets with the installed package (not only monorepo checkout).
[tool.hatch.build.targets.wheel.force-include]
"templates" = "livekit_agent_simulator/templates"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/templates",
    "/tests",
    "/README.md",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
